--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>test videochata</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://cdn.pubnub.com/pubnub-3.7.14.min.js"></script>
-        <script src="http://cdn.pubnub.com/webrtc/webrtc.js"></script>
+        <script src="https://cdn.pubnub.com/webrtc/webrtc.js"></script>
         
     </head>
     <body>
